--- a/.github/workflows/run_pipeline.yml
+++ b/.github/workflows/run_pipeline.yml
@@ -26,7 +26,7 @@ jobs:
       #- name: Set up Quarto
       #  uses: quarto-dev/quarto-actions/setup@v2
       - name: Render Quarto
-        run: quarto render index.qmd
+        run: python scripts/spotify.py
       - name: Configuro git en el runner
         run: |
           git config --local user.email "noreply@github.com"
