--- a/.github/workflows/run_pipeline.yml
+++ b/.github/workflows/run_pipeline.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: conda-incubator/setup-miniconda@v3
         with:
-          activate-environment: turb
+          activate-environment: ht.buscador
           environment-file: environment.yml
           auto-activate-base: false
       #- name: Set up Quarto
