--- a/.github/workflows/run_pipeline.yml
+++ b/.github/workflows/run_pipeline.yml
@@ -10,8 +10,8 @@ jobs:
       run:
         shell: bash -l {0}
     env:
-        CLIENT_ID: ${{ secrets.CLIENT_ID }}
-        CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+        SPOTIPY_CLIENT_ID: ${{ secrets.SPOTIPY_CLIENT_ID }}
+        SPOTIPY_CLIENT_SECRET: ${{ secrets.SPOTIPY_CLIENT_SECRET }}
         SPOTIPY_REFRESH_TOKEN: ${{ secrets.SPOTIPY_REFRESH_TOKEN }}
     steps:
       - run: echo "🎉 Tareas activadas automáticamente debido a un evento ${{ github.event_name }}"
