--- a/.github/workflows/run_pipeline.yml
+++ b/.github/workflows/run_pipeline.yml
@@ -22,6 +22,10 @@ jobs:
           activate-environment: ht.buscador
           environment-file: environment.yml
           auto-activate-base: false
+      - name: Cambio locale
+        run: |
+          sudo locale-gen es_ES.UTF-8
+          sudo update-locale
       - name: Creo sitio web
         run: scripts/principal.bash
       - name: Configuro git en el runner
