--- a/.github/workflows/run_pipeline.yml
+++ b/.github/workflows/run_pipeline.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Cambio locale
         run: |
           sudo locale-gen es_ES.UTF-8
-          sudo update-locale
+          sudo update-locale LANG=es_ES.UTF-8
       - name: Creo sitio web
         run: scripts/principal.bash
       - name: Configuro git en el runner
